--- a/css/index.css
+++ b/css/index.css
@@ -165,7 +165,6 @@ html {
     position: relative;
     background-color: #f4f4f4;
     height: 28px;
-    z-index: 9;
 }
 
 a:hover {
@@ -312,6 +311,7 @@ a:hover {
     height: 40px;
     margin-left: -5px;
     border: none;
+    font-size: 14px;
     color: #fff;
     text-align: center;
     cursor: pointer;
@@ -1516,7 +1516,6 @@ li .tit_spc:hover {
 
 .zd_index_boom {
     position: relative;
-    margin-bottom: 20px;
 }
 
 .zd_index_boom_tit .zd_index_fashion_tit,
